# twin

./: .env  .gitignore  .mcp.json  CLAUDE.md  Cargo.toml  Cross.toml  LICENSE  README.md  TROUBLESHOOTING.md  deny.toml  fix_clippy.patch  twin.toml.example  twin.toml.example.en  twin.toml.example.ja
.cargo/: config.toml
.cargo-husky/hooks/: pre-commit  pre-push
.claude/: settings.json  settings.local.json
.claude/agents/: git-commit-expert.md
.config/: nextest.toml
.github/: release.yml
.github/workflows/: quality.yml  release.yml  test.yml  update-wiki.yml
.kiro/specs/agent-session-attach/: requirements.md
.kiro/specs/git-worktree-manager/: design.md  requirements.md  tasks.md
.kiro/specs/twin-improve/: design.md  requirements.md  tasks.md
.lsmcp/memories/: test-coverage.md  test_cases_report.md
.serena/: project.yml
.serena/memories/: code_style_conventions.md  project_overview.md  project_structure.md  suggested_commands.md  task_completion_checklist.md
docs/: Architecture-Data-Flow.md  Architecture-Module-Structure.md  Architecture-System-Design.md  Architecture-Technology-Stack.md  Deployment-Build-Process.md  Deployment-Configuration.md  Development-Guides-Code-Styles.md  Development-Guides-Debugging.md  Development-Guides-Local-Development.md  Getting-Started-Architecture-Overview.md  Getting-Started-Core-Concepts.md  Getting-Started-Development-Setup.md  Getting-Started-Quick-Start.md  Home.md  JA-Getting-Started-Architecture-Overview.md  JA-Getting-Started-Core-Concepts.md  JA-Getting-Started-Development-Setup.md  JA-Getting-Started-Quick-Start.md  JA-Home.md  README.md  Testing-E2E-Testing.md  Testing-Integration-Testing.md  Testing-Testing-Strategy.md  Testing-Unit-Testing.md  WIKI_DEPLOYMENT.md
docs/package-managers/: SETUP-GUIDE.md  cargo-publish-setup.md  homebrew-formula.rb  scoop-manifest.json  winget-manifest.yaml
src/: cli.rs  cli_commands.rs  cli_output.rs  config.rs  environment.rs  git.rs  hooks.rs  lib.rs  main.rs  symlink.rs  tui.rs  utils.rs
src/cli/: commands.rs  output.rs
src/core/: error.rs  mod.rs  types.rs
tests/: e2e_basic.rs  e2e_container_test.rs  git_worktree_wrapper_test.rs  hook_integration_test.rs  init_command.rs  integration_container_test.rs  integration_test.rs  symlink_side_effect_test.rs  symlink_test.rs
tests/common/: mod.rs
