[package]
name = "twin"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.99"
chrono = { version = "0.4.41", features = ["serde"] }
clap = { version = "4.5.44", features = ["derive", "env"] }
crossterm = "0.29.0"
directories = "6.0.0"
git2 = "0.20.2"
log = "0.4.27"
notify = "8.2.0"
ratatui = "0.29.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"
tempfile = "3.20.0"
thiserror = "2.0.14"
tokio = { version = "1.47.1", features = ["full"] }
toml = "0.9.5"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
which = "8.0.0"

[dev-dependencies]
cargo-husky = "1.5.0"
mockall = "0.13.1"
pretty_assertions = "1.4.1"
tempfile = "3.20.0"
