[package]
name = "twin-cli"
version = "0.2.0"
edition = "2021"
authors = ["cotrin <cotrin8672@users.noreply.github.com>"]
description = "Git worktree wrapper with side effects (symlinks and hooks)"
repository = "https://github.com/cotrin/twin"
homepage = "https://github.com/cotrin/twin"
documentation = "https://docs.rs/twin-cli"
readme = "README.md"
keywords = ["git", "worktree", "cli", "symlink", "hooks"]
categories = ["command-line-utilities", "development-tools"]
license = "MIT"

# バイナリ名は "twin" のまま
[[bin]]
name = "twin"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.99"
chrono = { version = "0.4.41", features = ["serde"] }
clap = { version = "4.5.44", features = ["derive", "env"] }
directories = "6.0.0"
git2 = { version = "0.20.2", features = ["vendored-libgit2", "vendored-openssl"] }
log = "0.4.27"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"
tempfile = "3.20.0"
thiserror = "2.0.14"
tokio = { version = "1.47.1", features = ["full"] }
toml = "0.9.5"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }

[dev-dependencies]
cargo-husky = "1.5.0"
mockall = "0.13.1"
pretty_assertions = "1.4.1"
tempfile = "3.20.0"
testcontainers = "0.23.1"
bollard = "0.18.1"
futures-util = "0.3"
uuid = { version = "1.11", features = ["v4"] }
tar = "0.4"
